Bug 794663 - Allow downloading appcache for a specific appid/browserflag, r=jduell