uriloader/prefetch/OfflineCacheUpdateGlue.cpp
@@ -93,7 +93,8 @@ OfflineCacheUpdateGlue::Init(nsIURI *aManifestURI,
                              nsIURI *aDocumentURI,
                              nsIDOMDocument *aDocument,
                              nsIFile *aCustomProfileDir,
-                             nsILoadContext *aLoadContext)
+                             uint32_t aAppID,
+                             bool aInBrowser)
 {
     if (!EnsureUpdate())
         return NS_ERROR_NULL_POINTER;
@@ -103,7 +104,7 @@ OfflineCacheUpdateGlue::Init(nsIURI *aManifestURI,
     if (aDocument)
         SetDocument(aDocument);
 
-    return mUpdate->Init(aManifestURI, aDocumentURI, nullptr, aCustomProfileDir, aLoadContext);
+    return mUpdate->Init(aManifestURI, aDocumentURI, nullptr, aCustomProfileDir, aAppID, aInBrowser);
 }
 
 void
