uriloader/prefetch/OfflineCacheUpdateGlue.h
@@ -53,7 +53,8 @@ public:
                     nsIURI *aDocumentURI,
                     nsIDOMDocument *aDocument,
                     nsIFile *aCustomProfileDir,
-                    nsILoadContext *aLoadContext);
+                    uint32_t aAppID,
+                    bool aInBrowser);
 
     NS_DECL_NSIOFFLINECACHEUPDATEOBSERVER
 
