uriloader/prefetch/OfflineCacheUpdateParent.cpp
@@ -75,10 +75,6 @@ OfflineCacheUpdateParent::Schedule(const URIParams& aManifestURI,
 {
     LOG(("OfflineCacheUpdateParent::RecvSchedule [%p]", this));
 
-    // Load context members
-    mIsInBrowserElement = isInBrowserElement;
-    mAppId = appId;
-
     nsRefPtr<nsOfflineCacheUpdate> update;
     nsCOMPtr<nsIURI> manifestURI = DeserializeURI(aManifestURI);
     if (!manifestURI)
@@ -104,13 +100,15 @@ OfflineCacheUpdateParent::Schedule(const URIParams& aManifestURI,
     if (!NS_SecurityCompareURIs(manifestURI, documentURI, false))
         return NS_ERROR_DOM_SECURITY_ERR;
 
-    service->FindUpdate(manifestURI, this, getter_AddRefs(update));
+    service->FindUpdate(manifestURI, appId, isInBrowserElement,
+                        getter_AddRefs(update));
     if (!update) {
         update = new nsOfflineCacheUpdate();
 
         // Leave aDocument argument null. Only glues and children keep 
         // document instances.
-        rv = update->Init(manifestURI, documentURI, nullptr, nullptr, this);
+        rv = update->Init(manifestURI, documentURI, nullptr, nullptr,
+                          appId, isInBrowserElement);
         NS_ENSURE_SUCCESS(rv, rv);
 
         rv = update->Schedule();
